manifest/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: flux-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: dashboard.api.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ww-gitops-weave-gitops
            port: 
              number: 9001
